--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "scripts": {
         "build": "babel src --out-dir build",
         "dev": "nodemon src/index.js --exec babel-node",
-        "start": "node build/index.js"
+        "start": "node build/index"
     },
     "author": "Kevin Dussan",
     "license": "ISC",
     "dependencies": {
+        "@babel/polyfill": "^7.12.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
